# kg-

./: index.html  nova_ai_assistant_v2_fixed.html
NOVA/: CHANGELOG.md
NOVA-1/: CHANGELOG.md  README.md
NOVA-1/docs/: API.md
NOVA-1/frontend/: 404.html
NOVA-1/tests/unit/: test_logging.py
NOVA-v3.0-COMPLETE/: CHANGELOG.md  LICENSE
NOVA-v3.0-COMPLETE-FIXED/: CHANGELOG.md  index.html  pyproject.toml
NOVA-v3.0-COMPLETE/backend/: requirements.txt
NOVA-v3.0-COMPLETE/docs/: ARCHITECTURE.md
NOVA-v3.0-COMPLETE/frontend/: _headers  index.html
NOVA-v3.0-COMPLETE/frontend/assets/css/: foundation.css
NOVA-v3.0-GITHUB-READY/: INSTALL.md  README.md  _headers  wrangler.toml
NOVA-v3.0-GITHUB-READY/backend/nova/: config.py  logging.py
NOVA-v3.0-GITHUB-READY/frontend/: 404.html  index.html
NOVA-v3.0-GITHUB-READY/tests/unit/: test_config.py
NOVA/backend/: requirements-dev.txt
NOVA/backend/nova/: __init__.py
