[build-system]
requires = ["setuptools==75.8.2"]
build-backend = "setuptools.build_meta"

[project]
name = "nova-assistant"
version = "3.0.0.dev0"
description = "A modular local-first AI operating assistant"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { file = "LICENSE" }
authors = [{ name = "NOVA contributors" }]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows :: Windows 11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]

[tool.setuptools.packages.find]
where = ["backend"]
include = ["nova*"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers --cov=backend/nova --cov-report=term-missing --cov-fail-under=90"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["backend", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
pretty = true
files = ["backend", "tests"]

[tool.coverage.run]
branch = true
source = ["backend/nova"]

[tool.coverage.report]
show_missing = true
skip_covered = true

